parser.output
Terminals unused in grammar

   ARRAY
   BOOL
   DOT
   STRUCT
   EXP_STMT
   FUNCTION
   PARAM
   ARG
   CALL
   LABEL
   GOTO
   JLT
   JLE
   JGT
   JGE
   EQ
   NEQ
   ARRAY_FIRST


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE

   10 VarDec: ID LB INT RB
   11       | ID

   12 FuncDec: ID LP VarList RP
   13        | ID LP RP

   14 VarList: ParamDec
   15        | ParamDec COMMA VarList

   16 ParamDec: Specifier VarDec

   17 CompSt: LC DefList StmtList RC

   18 StmtList: /* empty */
   19         | Stmt StmtList

   20 Stmt: Exp SEMI
   21     | CompSt
   22     | RETURN Exp SEMI
   23     | IF LP Exp RP Stmt
   24     | IF LP Exp RP Stmt ELSE Stmt
   25     | WHILE LP Exp RP Stmt
   26     | FOR LP ExpForCond RP Stmt

   27 ExpForCond: ExpFor1 SEMI ExpFor2 SEMI ExpFor3

   28 DefList: /* empty */
   29        | Def DefList

   30 Def: Specifier DecList SEMI

   31 DecList: Dec
   32        | Dec COMMA DecList

   33 Dec: VarDec
   34    | VarDec ASSIGNOP Exp

   35 Exp: Exp ASSIGNOP Exp
   36    | Exp AND Exp
   37    | Exp OR Exp
   38    | Exp RELOP Exp
   39    | Exp PLUS Exp
   40    | Exp MINUS Exp
   41    | Exp STAR Exp
   42    | Exp DIV Exp
   43    | LP Exp RP
   44    | MINUS Exp
   45    | NOT Exp
   46    | VarDec SELFADD
   47    | SELFADD VarDec
   48    | VarDec SELFDEC
   49    | SELFDEC VarDec
   50    | VarDec ADD_ASSIGNOP Exp
   51    | VarDec MINUS_ASSIGNOP Exp
   52    | VarDec STAR_ASSIGNOP Exp
   53    | VarDec DIV_ASSIGNOP Exp
   54    | ID LP Args RP
   55    | ID LP RP
   56    | ID LB Exp RB
   57    | VarDec
   58    | INT
   59    | FLOAT
   60    | CHAR
   61    | BREAK
   62    | CONTINUE

   63 Args: Exp COMMA Args
   64     | Exp

   65 ExpFor1: /* empty */
   66        | ExpFor1List

   67 ExpFor1Atom: Specifier Dec
   68            | VarDec ASSIGNOP Exp

   69 ExpFor1List: ExpFor1Atom
   70            | ExpFor1Atom COMMA ExpFor1List

   71 ExpFor2: /* empty */
   72        | VarDec RELOP Exp

   73 ExpFor3: /* empty */
   74        | ExpFor3List

   75 ExpFor3List: Exp
   76            | Exp COMMA ExpFor3List


Terminals, with rules where they appear

$end (0) 0
error (256) 6
INT (258) 10 58
FLOAT (259) 59
CHAR (260) 60
ID (261) 10 11 12 13 54 55 56
RELOP (262) 38 72
TYPE (263) 9
ARRAY (264)
LP (265) 12 13 23 24 25 26 43 54 55
RP (266) 12 13 23 24 25 26 43 54 55
LB (267) 10 56
RB (268) 10 56
LC (269) 17
RC (270) 17
SEMI (271) 4 6 20 22 27 30
COMMA (272) 8 15 32 63 70 76
BOOL (273)
ASSIGNOP (274) 34 35 68
PLUS (275) 39
MINUS (276) 40 44
STAR (277) 41
DIV (278) 42
AND (279) 36
OR (280) 37
DOT (281)
NOT (282) 45
STRUCT (283)
RETURN (284) 22
BREAK (285) 61
CONTINUE (286) 62
IF (287) 23 24
ELSE (288) 24
WHILE (289) 25
FOR (290) 26
SELFADD (291) 46 47
SELFDEC (292) 48 49
ADD_ASSIGNOP (293) 50
MINUS_ASSIGNOP (294) 51
STAR_ASSIGNOP (295) 52
DIV_ASSIGNOP (296) 53
EXP_STMT (297)
FUNCTION (298)
PARAM (299)
ARG (300)
CALL (301)
LABEL (302)
GOTO (303)
JLT (304)
JLE (305)
JGT (306)
JGE (307)
EQ (308)
NEQ (309)
UMINUS (310)
LOWER_THAN_RB (311)
LOWER_THEN_ELSE (312)
ARRAY_FIRST (313)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
program (60)
    on left: 1, on right: 0
ExtDefList (61)
    on left: 2 3, on right: 1 3
ExtDef (62)
    on left: 4 5 6, on right: 3
ExtDecList (63)
    on left: 7 8, on right: 4 8
Specifier (64)
    on left: 9, on right: 4 5 16 30 67
VarDec (65)
    on left: 10 11, on right: 7 8 16 33 34 46 47 48 49 50 51 52 53
    57 68 72
FuncDec (66)
    on left: 12 13, on right: 5
VarList (67)
    on left: 14 15, on right: 12 15
ParamDec (68)
    on left: 16, on right: 14 15
CompSt (69)
    on left: 17, on right: 5 21
StmtList (70)
    on left: 18 19, on right: 17 19
Stmt (71)
    on left: 20 21 22 23 24 25 26, on right: 19 23 24 25 26
ExpForCond (72)
    on left: 27, on right: 26
DefList (73)
    on left: 28 29, on right: 17 29
Def (74)
    on left: 30, on right: 29
DecList (75)
    on left: 31 32, on right: 30 32
Dec (76)
    on left: 33 34, on right: 31 32 67
Exp (77)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60 61 62, on right: 20 22 23 24 25 34 35 36
    37 38 39 40 41 42 43 44 45 50 51 52 53 56 63 64 68 72 75 76
Args (78)
    on left: 63 64, on right: 54 63
ExpFor1 (79)
    on left: 65 66, on right: 27
ExpFor1Atom (80)
    on left: 67 68, on right: 69 70
ExpFor1List (81)
    on left: 69 70, on right: 66 70
ExpFor2 (82)
    on left: 71 72, on right: 27
ExpFor3 (83)
    on left: 73 74, on right: 27
ExpFor3List (84)
    on left: 75 76, on right: 74 76


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


State 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


State 2

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


State 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 10

   10 VarDec: ID . LB INT RB
   11       | ID .
   12 FuncDec: ID . LP VarList RP
   13        | ID . LP RP

    LP  shift, and go to state 14
    LB  shift, and go to state 15

    $default  reduce using rule 11 (VarDec)


State 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 16


State 12

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 17

    $default  reduce using rule 7 (ExtDecList)


State 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 18

    CompSt  go to state 19


State 14

   12 FuncDec: ID LP . VarList RP
   13        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 20

    Specifier  go to state 21
    VarList    go to state 22
    ParamDec   go to state 23


State 15

   10 VarDec: ID LB . INT RB

    INT  shift, and go to state 24


State 16

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 17

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 25

    ExtDecList  go to state 26
    VarDec      go to state 12


State 18

   17 CompSt: LC . DefList StmtList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 28 (DefList)

    Specifier  go to state 27
    DefList    go to state 28
    Def        go to state 29


State 19

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 20

   13 FuncDec: ID LP RP .

    $default  reduce using rule 13 (FuncDec)


State 21

   16 ParamDec: Specifier . VarDec

    ID  shift, and go to state 25

    VarDec  go to state 30


State 22

   12 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 31


State 23

   14 VarList: ParamDec .
   15        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 32

    $default  reduce using rule 14 (VarList)


State 24

   10 VarDec: ID LB INT . RB

    RB  shift, and go to state 33


State 25

   10 VarDec: ID . LB INT RB
   11       | ID .

    LB  shift, and go to state 15

    $default  reduce using rule 11 (VarDec)


State 26

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 27

   30 Def: Specifier . DecList SEMI

    ID  shift, and go to state 25

    VarDec   go to state 34
    DecList  go to state 35
    Dec      go to state 36


State 28

   17 CompSt: LC DefList . StmtList RC

    INT       shift, and go to state 37
    FLOAT     shift, and go to state 38
    CHAR      shift, and go to state 39
    ID        shift, and go to state 40
    LP        shift, and go to state 41
    LC        shift, and go to state 18
    MINUS     shift, and go to state 42
    NOT       shift, and go to state 43
    RETURN    shift, and go to state 44
    BREAK     shift, and go to state 45
    CONTINUE  shift, and go to state 46
    IF        shift, and go to state 47
    WHILE     shift, and go to state 48
    FOR       shift, and go to state 49
    SELFADD   shift, and go to state 50
    SELFDEC   shift, and go to state 51

    $default  reduce using rule 18 (StmtList)

    VarDec    go to state 52
    CompSt    go to state 53
    StmtList  go to state 54
    Stmt      go to state 55
    Exp       go to state 56


State 29

   29 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 28 (DefList)

    Specifier  go to state 27
    DefList    go to state 57
    Def        go to state 29


State 30

   16 ParamDec: Specifier VarDec .

    $default  reduce using rule 16 (ParamDec)


State 31

   12 FuncDec: ID LP VarList RP .

    $default  reduce using rule 12 (FuncDec)


State 32

   15 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 21
    VarList    go to state 58
    ParamDec   go to state 23


State 33

   10 VarDec: ID LB INT RB .

    $default  reduce using rule 10 (VarDec)


State 34

   33 Dec: VarDec .
   34    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 59

    $default  reduce using rule 33 (Dec)


State 35

   30 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 60


State 36

   31 DecList: Dec .
   32        | Dec . COMMA DecList

    COMMA  shift, and go to state 61

    $default  reduce using rule 31 (DecList)


State 37

   58 Exp: INT .

    $default  reduce using rule 58 (Exp)


State 38

   59 Exp: FLOAT .

    $default  reduce using rule 59 (Exp)


State 39

   60 Exp: CHAR .

    $default  reduce using rule 60 (Exp)


State 40

   10 VarDec: ID . LB INT RB
   11       | ID .
   54 Exp: ID . LP Args RP
   55    | ID . LP RP
   56    | ID . LB Exp RB

    LP  shift, and go to state 62
    LB  shift, and go to state 63

    $default  reduce using rule 11 (VarDec)


State 41

   43 Exp: LP . Exp RP

    INT       shift, and go to state 37
    FLOAT     shift, and go to state 38
    CHAR      shift, and go to state 39
    ID        shift, and go to state 40
    LP        shift, and go to state 41
    MINUS     shift, and go to state 42
    NOT       shift, and go to state 43
    BREAK     shift, and go to state 45
    CONTINUE  shift, and go to state 46
    SELFADD   shift, and go to state 50
    SELFDEC   shift, and go to state 51

    VarDec  go to state 52
    Exp     go to state 64


State 42

   44 Exp: MINUS . Exp

    INT       shift, and go to state 37
    FLOAT     shift, and go to state 38
    CHAR      shift, and go to state 39
    ID        shift, and go to state 40
    LP        shift, and go to state 41
    MINUS     shift, and go to state 42
    NOT       shift, and go to state 43
    BREAK     shift, and go to state 45
    CONTINUE  shift, and go to state 46
    SELFADD   shift, and go to state 50
    SELFDEC   shift, and go to state 51

    VarDec  go to state 52
    Exp     go to state 65


State 43

   45 Exp: NOT . Exp

    INT       shift, and go to state 37
    FLOAT     shift, and go to state 38
    CHAR      shift, and go to state 39
    ID        shift, and go to state 40
    LP        shift, and go to state 41
    MINUS     shift, and go to state 42
    NOT       shift, and go to state 43
    BREAK     shift, and go to state 45
    CONTINUE  shift, and go to state 46
    SELFADD   shift, and go to state 50
    SELFDEC   shift, and go to state 51

    VarDec  go to state 52
    Exp     go to state 66


State 44

   22 Stmt: RETURN . Exp SEMI

    INT       shift, and go to state 37
    FLOAT     shift, and go to state 38
    CHAR      shift, and go to state 39
    ID        shift, and go to state 40
    LP        shift, and go to state 41
    MINUS     shift, and go to state 42
    NOT       shift, and go to state 43
    BREAK     shift, and go to state 45
    CONTINUE  shift, and go to state 46
    SELFADD   shift, and go to state 50
    SELFDEC   shift, and go to state 51

    VarDec  go to state 52
    Exp     go to state 67


State 45

   61 Exp: BREAK .

    $default  reduce using rule 61 (Exp)


State 46

   62 Exp: CONTINUE .

    $default  reduce using rule 62 (Exp)


State 47

   23 Stmt: IF . LP Exp RP Stmt
   24     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 68


State 48

   25 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 69


State 49

   26 Stmt: FOR . LP ExpForCond RP Stmt

    LP  shift, and go to state 70


State 50

   47 Exp: SELFADD . VarDec

    ID  shift, and go to state 25

    VarDec  go to state 71


State 51

   49 Exp: SELFDEC . VarDec

    ID  shift, and go to state 25

    VarDec  go to state 72


State 52

   46 Exp: VarDec . SELFADD
   48    | VarDec . SELFDEC
   50    | VarDec . ADD_ASSIGNOP Exp
   51    | VarDec . MINUS_ASSIGNOP Exp
   52    | VarDec . STAR_ASSIGNOP Exp
   53    | VarDec . DIV_ASSIGNOP Exp
   57    | VarDec .

    SELFADD         shift, and go to state 73
    SELFDEC         shift, and go to state 74
    ADD_ASSIGNOP    shift, and go to state 75
    MINUS_ASSIGNOP  shift, and go to state 76
    STAR_ASSIGNOP   shift, and go to state 77
    DIV_ASSIGNOP    shift, and go to state 78

    $default  reduce using rule 57 (Exp)


State 53

   21 Stmt: CompSt .

    $default  reduce using rule 21 (Stmt)


State 54

   17 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 79


State 55

   19 StmtList: Stmt . StmtList

    INT       shift, and go to state 37
    FLOAT     shift, and go to state 38
    CHAR      shift, and go to state 39
    ID        shift, and go to state 40
    LP        shift, and go to state 41
    LC        shift, and go to state 18
    MINUS     shift, and go to state 42
    NOT       shift, and go to state 43
    RETURN    shift, and go to state 44
    BREAK     shift, and go to state 45
    CONTINUE  shift, and go to state 46
    IF        shift, and go to state 47
    WHILE     shift, and go to state 48
    FOR       shift, and go to state 49
    SELFADD   shift, and go to state 50
    SELFDEC   shift, and go to state 51

    $default  reduce using rule 18 (StmtList)

    VarDec    go to state 52
    CompSt    go to state 53
    StmtList  go to state 80
    Stmt      go to state 55
    Exp       go to state 56


State 56

   20 Stmt: Exp . SEMI
   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp

    RELOP     shift, and go to state 81
    SEMI      shift, and go to state 82
    ASSIGNOP  shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89


State 57

   29 DefList: Def DefList .

    $default  reduce using rule 29 (DefList)


State 58

   15 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 15 (VarList)


State 59

   34 Dec: VarDec ASSIGNOP . Exp

    INT       shift, and go to state 37
    FLOAT     shift, and go to state 38
    CHAR      shift, and go to state 39
    ID        shift, and go to state 40
    LP        shift, and go to state 41
    MINUS     shift, and go to state 42
    NOT       shift, and go to state 43
    BREAK     shift, and go to state 45
    CONTINUE  shift, and go to state 46
    SELFADD   shift, and go to state 50
    SELFDEC   shift, and go to state 51

    VarDec  go to state 52
    Exp     go to state 90


State 60

   30 Def: Specifier DecList SEMI .

    $default  reduce using rule 30 (Def)


State 61

   32 DecList: Dec COMMA . DecList

    ID  shift, and go to state 25

    VarDec   go to state 34
    DecList  go to state 91
    Dec      go to state 36


State 62

   54 Exp: ID LP . Args RP
   55    | ID LP . RP

    INT       shift, and go to state 37
    FLOAT     shift, and go to state 38
    CHAR      shift, and go to state 39
    ID        shift, and go to state 40
    LP        shift, and go to state 41
    RP        shift, and go to state 92
    MINUS     shift, and go to state 42
    NOT       shift, and go to state 43
    BREAK     shift, and go to state 45
    CONTINUE  shift, and go to state 46
    SELFADD   shift, and go to state 50
    SELFDEC   shift, and go to state 51

    VarDec  go to state 52
    Exp     go to state 93
    Args    go to state 94


State 63

   10 VarDec: ID LB . INT RB
   56 Exp: ID LB . Exp RB

    INT       shift, and go to state 95
    FLOAT     shift, and go to state 38
    CHAR      shift, and go to state 39
    ID        shift, and go to state 40
    LP        shift, and go to state 41
    MINUS     shift, and go to state 42
    NOT       shift, and go to state 43
    BREAK     shift, and go to state 45
    CONTINUE  shift, and go to state 46
    SELFADD   shift, and go to state 50
    SELFDEC   shift, and go to state 51

    VarDec  go to state 52
    Exp     go to state 96


State 64

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   43    | LP Exp . RP

    RELOP     shift, and go to state 81
    RP        shift, and go to state 97
    ASSIGNOP  shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89


State 65

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   44    | MINUS Exp .

    $default  reduce using rule 44 (Exp)


State 66

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp
   45    | NOT Exp .

    $default  reduce using rule 45 (Exp)


State 67

   22 Stmt: RETURN Exp . SEMI
   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . DIV Exp

    RELOP     shift, and go to state 81
    SEMI      shift, and go to state 98
    ASSIGNOP  shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89


State 68

   23 Stmt: IF LP . Exp RP Stmt
   24     | IF LP . Exp RP Stmt ELSE Stmt
